@@ -1,12 +1,14 @@
 package com.book.store.athena.controllers;
 
-import com.book.store.athena.model.dto.BooksCollectionDto;
-import com.book.store.athena.model.dto.BooksDto;
+import com.book.store.athena.model.dto.FindAllBooksDto;
+import com.book.store.athena.model.dto.CreateBooksDto;
+import com.book.store.athena.model.dto.UpdateBooksDto;
 import com.book.store.athena.model.entities.Books;
 import com.book.store.athena.model.repository.BooksRepository;
 import jakarta.transaction.Transactional;
 import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.core.io.support.ResourcePatternResolver;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
@@ -22,16 +24,69 @@ public class BooksController {
 
     @PostMapping
     @Transactional // rollback
-    private void postBooks (@RequestBody @Valid BooksDto books) {
+    protected void postBooks (@RequestBody @Valid CreateBooksDto books) {
 
         booksRepository.save(new Books(books));
 
     }
 
     @GetMapping("/collection")
-    public List <BooksCollectionDto> findAll () {
+    protected List <FindAllBooksDto> findAll () {
 
-        return booksRepository.findAll().stream().map(BooksCollectionDto::new).collect(Collectors.toList());
+        return booksRepository.findAllByActive(true).stream()
+                .map(FindAllBooksDto::new).toList();
+
+    }
+
+    @Transactional
+    @PutMapping("/update/{id}")
+    protected void update (@PathVariable Long id, @Valid @RequestBody UpdateBooksDto books) {
+
+        var queriedBook = booksRepository.findById(id);
+
+        if (queriedBook.isPresent()) {
+
+            var bookToUpdate = queriedBook.get();
+
+            bookToUpdate.updateBooks(books);
+
+            booksRepository.save(bookToUpdate);
+
+        }
+
+    }
+
+    @Transactional
+    @PutMapping("/reactivate/{id}")
+    protected void reactivate (@PathVariable Long id) {
+
+        var queriedBook = booksRepository.findById(id);
+
+        if (queriedBook.isPresent()) {
+
+            var bookAboutToUpdate = queriedBook.get();
+
+            bookAboutToUpdate.activate();
+
+            booksRepository.save(bookAboutToUpdate);
+
+        }
+
+    }
+
+    @Transactional
+    @DeleteMapping("/delete/{id}")
+    protected void delete (@PathVariable Long id) {
+
+        var queriedBook = booksRepository.findById(id);
+
+        if (queriedBook.isPresent()) {
+
+            var bookToDelete = queriedBook.get();
+
+            bookToDelete.inactive();
+
+        }
 
     }
 
